--- a/Movies.css
+++ b/Movies.css
@@ -42,3 +42,50 @@ input{
     row-gap: 15px;
     color: azure;
 }
+.movie-card{
+    height: 300px;
+    width: 250px;
+    border:1px solid;
+    border-radius:5px;
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+    align-items:center;
+}
+.imgtag{
+    height: 190px;
+    width: 200px;
+}
+@media(width<768px){
+    #Movies{
+        border: 3px solid rgb(163, 58, 75);
+        border-radius: 25px;
+        border-top: none;
+        box-shadow: 0px 3px 0px 3px rgb(163, 58, 75);
+        margin:30px 10px 0px 10px;
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        align-items: center;
+        justify-items: center;
+        row-gap: 5px;
+        color: azure;
+        padding: 5px;
+    }
+    .imgtag{
+        height: 90px;
+        width: 90px;
+    }
+    .h3tag{
+        font-size:small;
+    }
+    .movie-card{
+        height: 150px;
+        width: fit-content;
+        border:1px solid;
+        border-radius:5px;
+        display:flex;
+        flex-direction:column;
+        justify-content:space-between;
+        align-items:center;
+    }  
+}
