--- a/Movies.css
+++ b/Movies.css
@@ -85,6 +85,7 @@ input{
         border:1px solid;
         border-radius:5px;
         display:flex;
+        gap: 15px;
         flex-direction:column;
         justify-content:space-between;
         align-items:center;
