css edited for alignment

--- a/Movies.css
+++ b/Movies.css
@@ -76,7 +76,7 @@ input{
         width: 70px;
     }
     .h3tag, .atag{
-        font-size:x-small;
+        font-size:xx-small;
     }
     .movie-card{
         padding: 4px;
