--- a/Movies.css
+++ b/Movies.css
@@ -54,7 +54,11 @@ input{
     height: 190px;
     width: 200px;
 }
-@media(width<768px){
+@media(width<426px){
+    h1{
+        font-size: 1rem;
+        text-shadow: 1px 1px pink;
+    }
     #Movies{
         border: 3px solid rgb(163, 58, 75);
         border-radius: 25px;
@@ -63,6 +67,45 @@ input{
         margin:30px 10px 0px 10px;
         display: grid;
         grid-template-columns: repeat(2,1fr);
+        align-items: center;
+        justify-items: center;
+        gap: 10px;
+        color: azure;
+        padding: 5px;
+    }
+    .imgtag{
+        height: 90px;
+        width: 100%;
+    }
+    .h3tag, .atag{
+        font-size:xx-small;
+    }
+    .movie-card{
+        padding: 4px;
+        height: 150px;
+        width: 100%;
+        border:1px solid;
+        border-radius:5px;
+        display:flex;
+        gap: 15px;
+        flex-direction:column;
+        justify-content:space-between;
+        align-items:center;
+    }  
+}
+@media(426px<width<769px){
+    h1{
+        font-size: 1.5rem;
+        text-shadow: 1px 1px pink;
+    }
+    #Movies{
+        border: 3px solid rgb(163, 58, 75);
+        border-radius: 25px;
+        border-top: none;
+        box-shadow: 0px 3px 0px 3px rgb(163, 58, 75);
+        margin:30px 10px 0px 10px;
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
         align-items: center;
         justify-items: center;
         gap: 10px;
